Typo , Link nach untergang.de  Einführung Linux

--- a/_data/review-2020.yaml
+++ b/_data/review-2020.yaml
@@ -3,7 +3,7 @@ linuxuser:
     inhalt: |-
       03.03.2020
 
-        <ul><li>Vortrag Linux installieren gestern ud heute.</li> 
+        <ul><li>Vortrag Linux installieren gestern und heute. <a href="https://www.untergang.de/index.php/linux-blog/wolust-war-im-computerlabor-der-vhs.html" title="externer Link !">Die Folien</a></li> 
         <li>Linux-Desktop am Beispiel KDE</li>
         <li>Linux. wichtige Programme für den Desktop</li>
         <li>HandsOn: Linux USB bootet diverse PCs. Raspberrypi bootet.</li>
