--- a/_data/review-2020.yaml
+++ b/_data/review-2020.yaml
@@ -1,12 +1,23 @@
 linuxuser:
+  - monat: 04
+    inhalt: |-
+      08.04.2020
+
+        <ul><li>Online-Konferenz wegen Corona</li>
+        <li>Wir haben Nextcloud Talk probiert. Nach dem 4. Teilnehmer war Schluß</li> 
+        <li>VHS-Cloud: Was kann man machen. Vor und Nachteile. Wir werden es im Mai probieren</li>
+        <li>Docker , Docker, Docker</li>
+        <li>Node-Red und anderer Flow</li>
+        </ul>
   - monat: 03
     inhalt: |-
       03.03.2020
 
-        <ul><li>Vortrag Linux installieren gestern und heute. <a href="https://www.untergang.de/index.php/linux-blog/wolust-war-im-computerlabor-der-vhs.html" title="externer Link !">Die Folien</a></li> 
+        <ul><li>Wir waren im Computerlabor derVHS-Worms.</li>
+        <li>Linux installieren gestern und heute. <a href="https://www.untergang.de/index.php/linux-blog/wolust-war-im-computerlabor-der-vhs.html" title="externer Link !">Die Folien</a></li> 
         <li>Linux-Desktop am Beispiel KDE</li>
         <li>Linux. wichtige Programme für den Desktop</li>
-        <li>HandsOn: Linux USB bootet diverse PCs. Raspberrypi bootet.</li>
+        <li>HandsOn: Linux von USB-Stick bootet diverse PCs. Raspberrypi bootet.</li>
         </ul>
   - monat: 02
     inhalt: |-
