--- a/_data/review-2020.yaml
+++ b/_data/review-2020.yaml
@@ -3,17 +3,17 @@ linuxuser:
     inhalt: |-
       08.04.2020
 
-        <ul><li>Online-Konferenz wegen Corona</li>
-        <li>Wir haben Nextcloud Talk probiert. Nach dem 4. Teilnehmer war Schluß</li> 
+        <ul><li><strong>1.Online-Konferenz wegen Corona</strong></li>
+        <li>Wir haben <a href="https://nc.stefan-höhn.de/sites/spatzenbrett//sub/videoconferenz" title="externer Link !">Nextcloud Talk probiert</a> Nur 4 Teilnehmer waren möglich.</li> 
         <li>VHS-Cloud: Was kann man machen. Vor und Nachteile. Wir werden es im Mai probieren</li>
-        <li>Docker , Docker, Docker</li>
+        <li>Docker, Docker, Docker</li>
         <li>Node-Red und anderer Flow</li>
         </ul>
   - monat: 03
     inhalt: |-
       03.03.2020
 
-        <ul><li>Wir waren im Computerlabor derVHS-Worms.</li>
+        <ul><li>Wir waren im Computerlabor der VHS-Worms.</li>
         <li>Linux installieren gestern und heute. <a href="https://www.untergang.de/index.php/linux-blog/wolust-war-im-computerlabor-der-vhs.html" title="externer Link !">Die Folien</a></li> 
         <li>Linux-Desktop am Beispiel KDE</li>
         <li>Linux. wichtige Programme für den Desktop</li>
