--- a/_data/daten.yaml
+++ b/_data/daten.yaml
@@ -1,23 +1,23 @@
 linuxuser:
   - meeting: Nächstes Treffen
-    tag: '05'
-    monat: '05'
+    tag: '02'
+    monat: '06'
     jahr: 2020
     ort: Internet online !
     strasse: Videokonferenz  
     letztes: 1
     start: '19:30 Uhr'
   - meeting: Weitere Treffen
-    tag: '02'
-    monat: '06'
-    jahr: 2020
-    ort: Computerlabor des VHS-Worms Neusatzschule
-    strasse: Willy-Brandt-Ring 5
-    letztes: 2
-    start: '19:00 Uhr'
-  - meeting: Weitere Treffen
     tag: '07'
     monat: '07'
+    jahr: 2020
+    ort: Internet online !
+    strasse: Videokonferenz
+    letztes: 2
+    start: '19:30 Uhr'
+  - meeting: Weitere Treffen
+    tag: '04'
+    monat: '08'
     jahr: 2020
     ort: Timescafe Worms
     strasse: Ludwigsplatz
