--- a/_data/review-2020.yaml
+++ b/_data/review-2020.yaml
@@ -1,21 +1,24 @@
+---
 linuxuser:
   - monat: 05
     inhalt: |-
       05.05.2020
 
         <ul><li><strong>2.Online-Konferenz wegen Corona</strong></li>
-        <li>Unsere Hardwareschätzchen der vergangenen 30 Jahre </li> 
-        <li>NAS,warum man das braucht. NAS zuhause sinnvoll? NAS Soft- und Hardware.</li>
+        <li>Unsere Hardwareschätzchen der vergangenen 30 Jahre </li>
+        <li>NAS,warum man das braucht. NAS zuhause sinnvoll?
+        NAS Soft- und Hardware.</li>
         <li>Daten synchronisieren - Nextcloud "kann alles".</li>
         <li>Wir hatten Besuch aus dem Ruhrgebiet.</li>
-        <li>Firefox mit open-with Extension ist eine Schnittstelle zur Shell </li>
+        <li>Firefox mit open-with Extension ist eine Schnittstelle zur Shell
+        </li>
         </ul>
   - monat: 04
     inhalt: |-
       08.04.2020
 
         <ul><li><strong>1.Online-Konferenz wegen Corona</strong></li>
-        <li>Wir haben <a href="https://nc.stefan-höhn.de/sites/spatzenbrett//sub/videoconferenz" title="externer Link !">Nextcloud Talk probiert</a> Nur 4 Teilnehmer waren möglich.</li> 
+        <li>Wir haben <a href="https://nc.stefan-höhn.de/sites/spatzenbrett/sub/videoconferenz" title="externer Link !">Nextcloud Talk probiert</a> Nur 4 Teilnehmer waren möglich.</li>
         <li>VHS-Cloud: Was kann man machen. Vor und Nachteile. Wir werden es im Mai probieren</li>
         <li>Docker, Docker, Docker</li>
         <li>Node-Red und anderer Flow</li>
@@ -25,20 +28,24 @@ linuxuser:
       03.03.2020
 
         <ul><li>Wir waren im Computerlabor der VHS-Worms.</li>
-        <li>Linux installieren gestern und heute. <a href="https://www.untergang.de/index.php/linux-blog/wolust-war-im-computerlabor-der-vhs.html" title="externer Link !">Die Folien</a></li> 
+        <li>Linux installieren gestern und heute.
+        <a href="https://www.untergang.de/index.php/linux-blog/wolust-war-im-computerlabor-der-vhs.html" title="externer Link !">
+        Die Folien</a></li>
         <li>Linux-Desktop am Beispiel KDE</li>
         <li>Linux. wichtige Programme für den Desktop</li>
-        <li>HandsOn: Linux von USB-Stick bootet diverse PCs. Raspberrypi bootet.</li>
+        <li>HandsOn: Linux von USB-Stick bootet diverse PCs.
+        Raspberrypi bootet.</li>
         </ul>
   - monat: 02
     inhalt: |-
       04.02.2020
 
-        <ul><li>Rocketscience</li> 
+        <ul><li>Rocketscience</li>
         <li>Nextcloud kann fast alles?</li>
         <li>Tipps für Linux Anfänger und Umsteiger</li>
         <li>Windowmanager</li>
-        <li>Themen für den März Stammtisch: KDE / wichtige Programme / Linux Umstieg vor 20 Jahren / Knoppix-USB</li>
+        <li>Themen für den März Stammtisch: KDE / wichtige Programme /
+        Linux Umstieg vor 20 Jahren / Knoppix-USB</li>
         </ul>
   - monat: 01
     inhalt: |-
@@ -54,4 +61,3 @@ linuxuser:
         <li>DSL-Modem. So war das früher</li>
         <li>ImageMagicK 200 Beispiele</li>
         <li>Werbung für Wolust und VHS-Webseite</li></ul>
-
