--- a/_data/daten.yaml
+++ b/_data/daten.yaml
@@ -12,7 +12,7 @@ linuxuser:
     tag: '01'
     monat: '09'
     jahr: 2020
-    ort: Timescafe Worms !
+    ort: Timescafe Worms
     strasse: Ludwigsplatz
     letztes: 2
     start: '19:30 Uhr'
@@ -20,7 +20,7 @@ linuxuser:
     tag: '06'
     monat: '10'
     jahr: 2020
-    ort: Timescafe Worms
-    strasse: Ludwigsplatz
+    ort: VHS Worms
+    strasse: Willy-Brandt-Ring 5
     letztes: 3
-    start: '19:30 Uhr'
+    start: '19:00 Uhr'
