wolust  jetzt auch gedockert

--- a/_data/daten.yaml
+++ b/_data/daten.yaml
@@ -5,7 +5,7 @@ linuxuser:
     monat: '08'
     jahr: 2020
     ort: Timescafe Worms
-    strasse:  Ludwigsplatz
+    strasse:  Ludwigsplatz 1
     letztes: 1
     start: '19:30 Uhr'
   - meeting: Weitere Treffen
