--- a/_data/daten.yaml
+++ b/_data/daten.yaml
@@ -1,20 +1,12 @@
 ---
 linuxuser:
   - meeting: Nächstes Treffen
-    tag: '04'
-    monat: '08'
-    jahr: 2020
-    ort: Timescafe Worms
-    strasse:  Ludwigsplatz 1
-    letztes: 1
-    start: '19:30 Uhr'
-  - meeting: Weitere Treffen
     tag: '01'
     monat: '09'
     jahr: 2020
     ort: Timescafe Worms
     strasse: Ludwigsplatz
-    letztes: 2
+    letztes: 1
     start: '19:30 Uhr'
   - meeting: Weitere Treffen
     tag: '06'
@@ -22,5 +14,13 @@ linuxuser:
     jahr: 2020
     ort: VHS Worms
     strasse: Willy-Brandt-Ring 5
-    letztes: 3
+    letztes: 2
     start: '19:00 Uhr'
+  - meeting: Weitere Treffen
+    tag: '03'
+    monat: '11'
+    jahr: 2020
+    ort: Tinescafe Worms
+    strasse: Ludwigsplatz
+    letztes: 3
+    start: '19:30 Uhr'
