Link zum Online Editor auf jeder Webseite eingebaut

--- a/_data/review-2020.yaml
+++ b/_data/review-2020.yaml
@@ -5,7 +5,7 @@ linuxuser:
       01.09.2020
 
         <ul>
-        <li>Gast aus Birmingham</li>
+        <li>Gast aus Birmingham am Stammtisch</li>
         <li>Arduinino/Atmel und Programmer am Beispiel 2-Punktregler</li>
         <li>Nextcloud auf einen neuen Server oder Distro umziehen </li>
         <li>Was geht mit Docker</li>
