--- a/_data/daten.yaml
+++ b/_data/daten.yaml
@@ -6,15 +6,15 @@ linuxuser:
     jahr: 2020
     ort: VHS Worms
     strasse: Willy-Brandt-Ring 5
-    letztes: 2
+    letztes: 1
     start: '19:00 Uhr'
   - meeting: Weitere Treffen
     tag: '03'
     monat: '11'
     jahr: 2020
-    ort: Tinescafe Worms
+    ort: Timescafe Worms
     strasse: Ludwigsplatz
-    letztes: 3
+    letztes: 2
     start: '19:30 Uhr'
   - meeting: Weitere Treffen
     tag: '01'
@@ -22,5 +22,5 @@ linuxuser:
     jahr: 2020
     ort: Timescafe Worms
     strasse: Ludwigsplatz
-    letztes: 1
+    letztes: 3
     start: '19:30 Uhr'
