november 2020 in der Cloud

--- a/_data/daten.yaml
+++ b/_data/daten.yaml
@@ -4,8 +4,8 @@ linuxuser:
     tag: '03'
     monat: '11'
     jahr: 2020
-    ort: Timescafe Worms
-    strasse: Ludwigsplatz
+    ort: VHS Cloud
+    strasse: Worms
     letztes: 1
     start: '19:30 Uhr'
   - meeting: Weitere Treffen
