coronabedingt online November 2020

--- a/_data/daten.yaml
+++ b/_data/daten.yaml
@@ -4,8 +4,8 @@ linuxuser:
     tag: '03'
     monat: '11'
     jahr: 2020
-    ort: VHS Cloud
-    strasse: Worms
+    ort: Coronabedingt Online
+    strasse: VHS-Cloud
     letztes: 1
     start: '19:30 Uhr'
   - meeting: Weitere Treffen
