map exception jetzt mit cowsay

--- a/_data/daten.yaml
+++ b/_data/daten.yaml
@@ -4,7 +4,7 @@ linuxuser:
     tag: '01'
     monat: '12'
     jahr: 2020
-    ort: Coronabedingt Online
+    ort: Coronabedingt online
     strasse: VHS-Cloud
     letztes: 1
     start: '19:30 Uhr'
