--- a/_data/review-2021.yaml
+++ b/_data/review-2021.yaml
@@ -2,11 +2,11 @@
 linuxuser:
   - monat: 1
     inhalt: |-
-      03.01.2021
+      05.01.2021
       
       Noch kein Stammtisch 2021
       
       <ul>
-      <li>Der Wolust wünscht fröhliche Weihnachten und ein tolles neues Jahr. </li>
+      <li>In Planung</li>
       </ul>
       
