--- a/_data/daten.yaml
+++ b/_data/daten.yaml
@@ -20,7 +20,7 @@ linuxuser:
     tag: '02'
     monat: '03'
     jahr: 2021
-    ort: Timescafe Worms
-    strasse: Ludwigsplatz
+    ort: Volkshochschule Worms
+    strasse: Willy-Brandt-Ring 5
     letztes: 3
     start: '19:30 Uhr'
