--- a/_data/review-2021.yaml
+++ b/_data/review-2021.yaml
@@ -12,3 +12,18 @@ linuxuser:
         <li>Crypto mit Hardware.</li>
         <li>Transport Protokoll von Google.</li>
         <li>Gnuplot Grafik anpassen.</li></ul>
+
+  - monat: 2
+    inhalt: |-
+      03.02.2021
+
+        <ul><li>Mikrofon/Soundprobleme einiger Teilnehmer</li>
+        <li>Hausautomation mit Tasmota und 1-Wire</li>
+        <li>Displays ansteuern i2C,SPI und 4-Bit
+        <li>Silvesterraketen elektronische Payload und das Recht§.</li>
+        <li>Solid Internet von Tim Benes-Lee</li>
+        <li>SSH-Logging auswerten mit einem Perlscript</li>
+        <li>433 MHz und der Manchester-Code</li>
+        <li>Verkehrsprobleme lösen: Tesla, Wasserstoff oder Umzug</li>
+        <li>VHS-Linux-Anfängerabend muss vorbereitet werden</li></ul>
+       
