--- a/_data/daten.yaml
+++ b/_data/daten.yaml
@@ -2,24 +2,24 @@
 linuxuser:
 
   - meeting: Nächstes Treffen
-    tag: '02'
-    monat: '03'
+    tag: '06'
+    monat: '04'
     jahr: 2021
     ort: Coronabedingt online
     strasse: VHS-Cloud
     letztes: 3
     start: '19:30 Uhr'
   - meeting: Weitere Treffen
-    tag: '06'
-    monat: '04'
-    jahr: 2021
-    ort: Timescafe Worms
-    strasse: Ludwigsplatz
-    letztes: 2
-    start: '19:30 Uhr'
-  - meeting: Weitere Treffen
     tag: '04'
     monat: '05'
+    jahr: 2021
+    ort: Volkshochschule Worms
+    strasse: Willy-Brandt-Ring 5
+    letztes: 2
+    start: '19:00 Uhr'
+  - meeting: Weitere Treffen
+    tag: '01'
+    monat: '06'
     jahr: 2021
     ort: Coronabedingt online
     strasse: VHS-Cloud
