repository geändert. War nur wolust

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
-repository: wolust
+
+repository: Wolust/wolust.github.io.
 title: Wormser Linux User Stammtisch
 email: wolust@untergang.de
 author: Stefan Höhn
