--- a/_data/daten.yaml
+++ b/_data/daten.yaml
@@ -5,8 +5,8 @@ linuxuser:
     tag: '04'
     monat: '05'
     jahr: 2021
-    ort: VHS Worms
-    strasse: Willy-Brandt-Ring 5
+    ort: Online-Konferenz
+    strasse: VHS-Cloud
     letztes: 3
     start: '19:00 Uhr'
   - meeting: Weitere Treffen
@@ -18,8 +18,8 @@ linuxuser:
     letztes: 2
     start: '19:30 Uhr'
   - meeting: Weitere Treffen
-    tag: '01'
-    monat: '06'
+    tag: '06'
+    monat: '07'
     jahr: 2021
     ort: Timescafe Worms
     strasse: Ludwigsplatz
