--- a/_data/review-2021.yaml
+++ b/_data/review-2021.yaml
@@ -13,7 +13,7 @@ linuxuser:
         <li>Kühe als Haustiere oder Nutztiere</li>
         <li>Hackerkultur in Frankreich?</li>
         <li>Pornografischer Desktophintergrund bei Ubuntu 20.4</li>
-        <li><a href"https://github.com/Wolust/Linkliste/blob/master/wolust210504.txt">Linkliste</a> NEU!</li></ul>
+        <li>[Linkliste](https://github.com/Wolust/Linkliste/blob/master/wolust210504.txt) NEU!</li></ul>
         
   - monat: 4
     inhalt: |-
