--- a/_data/daten.yaml
+++ b/_data/daten.yaml
@@ -2,24 +2,24 @@
 linuxuser:
 
   - meeting: Nächstes Treffen
-    tag: '01'
-    monat: '06'
+    tag: '06'
+    monat: '07'
     jahr: 2021
-    ort: Online-Konferenz
-    strasse: VHS-Cloud
+    ort: Tiemscafe Worms
+    strasse: Ludwigsplatz
     letztes: 3
     start: '19:30 Uhr'
   - meeting: Weitere Treffen
-    tag: '06'
-    monat: '07'
+    tag: '03'
+    monat: '08'
     jahr: 2021
     ort: Timescafe Worms
     strasse: Ludwigsplatz
     letztes: 2
     start: '19:30 Uhr'
   - meeting: Weitere Treffen
-    tag: '03'
-    monat: '08'
+    tag: '07'
+    monat: '09'
     jahr: 2021
     ort: Timescafe Worms
     strasse: Ludwigsplatz
