--- a/_data/daten.yaml
+++ b/_data/daten.yaml
@@ -5,7 +5,7 @@ linuxuser:
     tag: '06'
     monat: '07'
     jahr: 2021
-    ort: Tiemscafe Worms
+    ort: Timescafe Worms
     strasse: Ludwigsplatz
     letztes: 3
     start: '19:30 Uhr'
