--- a/_data/review-2021.yaml
+++ b/_data/review-2021.yaml
@@ -1,6 +1,22 @@
 ---
 linuxuser:
 
+
+  - monat: 10
+    inhalt: |-
+      05.10.2021
+
+        <ul>
+        <li>Android Hintergrund selbst programmieren (dynamisch)</li>
+        <li>ZFS Deduplizieren</li>
+        <li>Die Varianten von top</li>
+        <li>Podcasts Thema Linux</li>
+        <li>Verschlüsseln</li>
+        <li>Ein universelles Trackingtool mit Raspberry Pi</li>
+        <li>CovPass-Check-App</li>
+        <li>IPv6</li>
+        </ul>
+
   - monat: 9
     inhalt: |-
       07.09.2021
