--- a/_config.yml
+++ b/_config.yml
@@ -11,6 +11,7 @@ date_format_year: '%Y'
 date_format : '%-d . %m . %Y %H:%M'
 header_pages:
   - map.md
+  - contact.html
   - help.md
   
 lolo: 'lolo is amaster'  
