Dezembertreffen 2021 in der VHS-Cloud

--- a/_data/daten.yaml
+++ b/_data/daten.yaml
@@ -5,8 +5,8 @@ linuxuser:
     tag: '07'
     monat: '12'
     jahr: 2021
-    ort: Timescafe Worms
-    strasse: Ludwigsplatz
+    ort: Cloud
+    strasse: VHS
     letztes: 3
     start: '19:30 Uhr'
   - meeting: Weitere Treffen
