Wolust Januar 2022 ist vorbei

--- a/_data/review-2022.yaml
+++ b/_data/review-2022.yaml
@@ -6,6 +6,8 @@ linuxuser:
     inhalt: |-
       04.01.2022
 
-        <ul><li>Lolo is a dancer</li>
-        <li>and I know her</li></ul>
- 
+        <ul><li>One-wire Bus></li>
+        <li>M-Bus</li>
+        <li>Messtechnik Temperatur und Druck</li>
+        <li>Corona Daten (speziell Worms)</li>
+        <li>Github Software Test</li></ul>
