--- a/_data/review-2022.yaml
+++ b/_data/review-2022.yaml
@@ -6,7 +6,7 @@ linuxuser:
     inhalt: |-
       04.01.2022
 
-        <ul><li>One-wire Bus></li>
+        <ul><li>One-wire Bus</li>
         <li>M-Bus</li>
         <li>Messtechnik Temperatur und Druck</li>
         <li>Corona Daten (speziell Worms)</li>
