--- a/_data/review-2022.yaml
+++ b/_data/review-2022.yaml
@@ -11,3 +11,17 @@ linuxuser:
         <li>Messtechnik Temperatur und Druck</li>
         <li>Corona Daten (speziell Worms)</li>
         <li>Github Software Test</li></ul>
+  - monat: 02
+    inhalt: |-
+      01.02.2022
+
+        <ul><li>3D-Drucker bei ALDI</li>
+        <li>Docker ganzes Linux mit XFCE</li>
+        <li>Falkon Browser</li>
+        <li>Sachen mit Attiny steuern</li>
+        <li>Konsole oder Terminator</li>
+        <li>Hardware in die Webcam halten</li>
+        <li>Früher gabs SCSI [ˈskʌzi]</li>
+        <li>Corona Daten (speziell Worms)</li>
+        <li>Alte Männer babbeln Zeugs</li></ul>
+        
