Linkliste aus VHS-BBB eingefügt

--- a/_data/review-2022.yaml
+++ b/_data/review-2022.yaml
@@ -23,5 +23,5 @@ linuxuser:
         <li>Hardware in die Webcam halten</li>
         <li>Früher gabs SCSI [ˈskʌzi]</li>
         <li>Corona Daten (speziell Worms)</li>
-        <li>Alte Männer babbeln Zeugs</li></ul>
-        
+        <li>Alte Männer babbeln Zeugs</li>
+        <li> https://github.com/Wolust/Linkliste/blob/master/wolust220201.txt NEU!</li></ul>
