--- a/_data/review-2022.yaml
+++ b/_data/review-2022.yaml
@@ -25,3 +25,14 @@ linuxuser:
         <li>Corona Daten (speziell Worms)</li>
         <li>Alte Männer babbeln Zeugs</li>
         <li> https://github.com/Wolust/Linkliste/blob/master/wolust220201.txt NEU!</li></ul>
+
+  - monat: 03
+    inhalt: |-
+      01.03.2022
+
+        <ul><li>Verschlüsselung, Zertifikate ein Uberblick.</li>
+        <li>Computer aufräumen & Backup</li>
+        <li>MateBook und Linux Manjaro</li>
+        <li>Panic-Taste und Thermostat mit Attiny steuern</li>
+        <li>Default Shell wechseln</li>
+        <li>Computer aufräumen und Backup</li></ul>
