kurzfristige Änderung wegen Corona

--- a/_data/daten.yaml
+++ b/_data/daten.yaml
@@ -5,8 +5,8 @@ linuxuser:
     tag: '08'
     monat: '03'
     jahr: 2022
-    ort: Timescafe Worms
-    strasse: Ludwigsplatz
+    ort: ONLINE!
+    strasse: in der VHS-Cloud
     letztes: 3
     start: '19:30 Uhr'
   - meeting: Weitere Treffen
