Linkliste in md verwandelt und integriert. Links aus dem Review funktionieren endlich, Vorträge noch mal durchgesehen  und Author tag eingefügt.

--- a/_config.yml
+++ b/_config.yml
@@ -115,7 +115,8 @@ plugins:
   - jekyll-avatar
   - jekyll-mentions
   - jekyll-feed
-
+include:
+ - _linkliste
 exclude:
   - Gemfile
   - Gemfile.lock
