--- a/_data/review-2021.yaml
+++ b/_data/review-2021.yaml
@@ -101,8 +101,8 @@ linuxuser:
         <li>VHS.cloud BBB Desktopfreigabe funktioniert nur beim Administrator</li>
         <li>VHS Real Wir sind aus dem Programm gefallen?</li>
         <li>Mattermost </li>
-        <li>Wolust.de ist jetzt eine PWA</li>
-        <li> https://github.com/Wolust/Linkliste/blob/master/wolust210601.txt NEU!</li></ul>
+        <li>Wolust.de ist jetzt eine PWA</li></ul>
+    link: /_linkliste/wolust210601
 
   - monat: 5
     inhalt: |-
@@ -115,8 +115,8 @@ linuxuser:
         <li>Ingenieur kann Pumpe nach Leistungsanforderungen auswählen oder mit dem Chef verhandeln</li>
         <li>Kühe als Haustiere oder Nutztiere</li>
         <li>Hackerkultur in Frankreich?</li>
-        <li>Pornografischer Desktophintergrund bei Ubuntu 20.4</li>
-        <li> https://github.com/Wolust/Linkliste/blob/master/wolust210504.txt NEU!</li></ul>
+        <li>Pornografischer Desktophintergrund bei Ubuntu 20.4</li></ul>
+    link: /_linkliste/wolust210504
         
   - monat: 4
     inhalt: |-
@@ -130,7 +130,7 @@ linuxuser:
         <li>Corona und Wolust. Corona und impfen bei Übergewicht. </li>
         <li>Feuer im Rechenzentrum. Was war in Straßburg ?</li>
         <li>Explosionen im Betrieb und Brandverletzung</li></ul>
-       
+    link: /_linkliste/wolust210406
 
   - monat: 3
     inhalt: |-
