--- a/_data/review-2022.yaml
+++ b/_data/review-2022.yaml
@@ -1,6 +1,19 @@
 ---
 linuxuser:
 
+  - monat: 07
+    inhalt: |-
+       05.07.2022
+
+        <ul><li>Geigerzähler DIY/gezeigt</li>
+        <li>Attiny mit Arduino programmiert/gezeigt</li>
+        <li>Odroid M1/mitgebracht</li>
+        <li>Markdown anwenden die Flavors und Pandoc</li>
+        <li>Soundprobleme mit Arch, Manjaro und Intelchipsatz</li>
+        <li>Alsa, Pulseaudio, Pipewire, Wireplumber</li>
+        <li>Froscon St.Augustin, Makerfaire Hannover, Piandmore Weinheim</li>
+        <li>Flatpak und Snap</li></ul>
+
   - monat: 06
     inhalt: |-
        07.06.2022
